# EMBER-Exp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  RELEASE.md
ember/: CMakeLists.txt  ember.hpp
ember/datatypes/: CMakeLists.txt  em_array.hpp  em_fifo.hpp  em_integer.hpp  em_types.hpp
ember/datatypes/cpp/: CMakeLists.txt  em_integer.cpp
ember/datatypes/tpp/: em_array.tpp  em_fifo.tpp
ember/faults/: CMakeLists.txt  em_fault.hpp  emf_baseline_dtypes.hpp  emf_dtypes.hpp  emf_list.hpp  emf_models.hpp  emf_random.hpp  flf_random.hpp
ember/faults/cpp/: CMakeLists.txt  emf_random.cpp
ember/faults/tpp/: emf_dtypes.tpp  emf_list.tpp  emf_models.tpp
ember/kernel/: CMakeLists.txt  em_imodule.hpp  em_iobject.hpp  em_iport.hpp  em_isaboteur.hpp  em_port.hpp
ember/kernel/tpp/: em_port.tpp
ember/sysutils/: CMakeLists.txt  em_defs.hpp  em_math.hpp  em_random.hpp  em_string.hpp  em_time.hpp
ember/sysutils/cpp/: CMakeLists.txt  em_string.cpp
ember/sysutils/tpp/: em_random.tpp  em_time.tpp
examples/: CMakeLists.txt  README.md
examples/adder/: CMakeLists.txt  adder.hpp  adder.tpp  adder_wreg.hpp  adder_wreg.tpp  main.cpp
examples/adder_array/: CMakeLists.txt  adder_array.hpp  adder_array.tpp  main.cpp
examples/dpsram/: CMakeLists.txt  main.cpp
examples/netlist/: CMakeLists.txt  inject.cpp  netlist.hpp  netlist.tpp  validate.cpp
examples/verilator/: CMakeLists.txt  mac_wrapper.cpp  mac_wrapper.hpp  main.cpp
examples/verilator/include/: mac.hpp
examples/verilator/vmod/: CMakeLists.txt  VLIB_adder.sv  VLIB_adder_tree.sv  VLIB_multiplier.sv  mac.sv
saboteurs/: CMakeLists.txt  ember_saboteurs.hpp
saboteurs/ems_lib/: CMakeLists.txt
saboteurs/ems_lib/ems_dpsram/: CMakeLists.txt  ems_dpsram.hpp
saboteurs/ems_lib/ems_ff/: CMakeLists.txt  ems_ff.hpp
saboteurs/ems_lib/ems_ff/tpp/: ems_ff.tpp  ems_ff_array.tpp
saboteurs/ems_lib/ems_stdcells/: CMakeLists.txt  ems_stdcells.hpp
saboteurs/ems_lib/ems_stdcells/cpp/: CMakeLists.txt  ems_stdcells.cpp
saboteurs/ems_lib/ems_stdcells/new/: ems_IGate.hpp
verilator/: ember_verilator.hpp  emv_convert_array.hpp  emv_convert_c.hpp  emv_dtypes.hpp  emv_saboteur.hpp
verilator/tpp/: emv_extended_saboteur.tpp  emv_nonext_saboteur.tpp
